--- a/ECU.WEB/src/app/business/dashboard/dashboard.component.html
+++ b/ECU.WEB/src/app/business/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
 <div class="mb-12 grid gap-y-10 gap-x-6 md:grid-cols-2 xl:grid-cols-4">
   <p>asdasasdasdasdasdasdasdasasd</p>
+  <p>{{titulo}}</p>
 </div>
